@@ -1,0 +1,14 @@
+#ifndef _CREEXPERIENCEWINDOW_H
+#define	_CREEXPERIENCEWINDOW_H
+
+#include <QWidget>
+
+class CREExperienceWindow : public QWidget
+{
+    public:
+        CREExperienceWindow();
+        virtual ~CREExperienceWindow();
+};
+
+#endif	/* _CREEXPERIENCEWINDOW_H */
+
